[gd_scene load_steps=2 format=2]

[ext_resource path="res://Camera.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
current = true
script = ExtResource( 1 )

[node name="camZoom" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="tween_all_completed" from="camZoom" to="." method="_on_camZoom_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
